Исправлены ошибки CheckStile GithubActions.